# rnnoise

./: .gitignore  CMakeLists.txt
src/x86/: nnet_avx2.c  nnet_sse4_1.c
